; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_pageattr.c_cpa_set_pages_array.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_pageattr.c_cpa_set_pages_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@CPA_PAGES_ARRAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.page**, i32, i32)* @cpa_set_pages_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpa_set_pages_array(%struct.page** %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.page**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.page** %0, %struct.page*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @__pgprot(i32 0)
  %10 = load i32, i32* @CPA_PAGES_ARRAY, align 4
  %11 = load %struct.page**, %struct.page*** %4, align 8
  %12 = call i32 @change_page_attr_set_clr(i32* null, i32 %7, i32 %8, i32 %9, i32 0, i32 %10, %struct.page** %11)
  ret i32 %12
}

declare dso_local i32 @change_page_attr_set_clr(i32*, i32, i32, i32, i32, i32, %struct.page**) #1

declare dso_local i32 @__pgprot(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
